# P.Vilane

./: README.md
sources/clean-excel/: pyproject.toml
sources/clean-excel/clean_excel/: limpieza_excel.py  limpieza_excel2.py  mezclar_excels.py
sources/clean-excel/tests/: __init__.py
tools/logs/: pyproject.toml
tools/logs/logs/: __init__.py
